# crewai-brainstormer

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: parallel_runner.py
src/: CrewAIBrainstormer.py  main.py  random_helper.py
src/config/: agents.yaml
src/idea_generator/: crew.py  main.py  parallel_runner.py
src/idea_generator/config/: agents.yaml  tasks.yaml
