[project]
name = "idea_generator"
version = "0.1.0"
description = "idea_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
idea_generator = "idea_generator.main:run"
run_crew = "idea_generator.main:run"
train = "idea_generator.main:train"
replay = "idea_generator.main:replay"
test = "idea_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
