[project]
name = "crewai-brainstormer"
version = "0.1.0"
description = "A multi-agent system based on AI to follow the Design Thinking process of IBM. Using CrewAI and LLMs to generate innovative mobile app ideas."
authors = [{ name = "Cyril Deschamps" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.11.0",
    "crewai-tools==0.36.0",
    "requests>=2.31.0"
]

[project.scripts]
run_crew = "src.main:run"
run_parallel = "src.parallel_runner:main"
init = "src.scripts.init:run_init"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "README.md",
]
